# Bio-Forge-OS

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md
backend/: .env.example  pyproject.toml  run.sh  schema.sql
backend/src/: main.py
backend/src/agents/: __init__.py  genetic_circuit_designer.py  molecular_architect.py  orchestrator.py
backend/src/lib/: ai_client.py  bio_apis.py  circuit_apis.py  db.py  env.py
backend/src/routes/: api.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BioLingoConsole.tsx  CircuitDesignerConsole.tsx  ExpressionSimulator.tsx  HoloStudio.tsx  PathwayExplorer.tsx  ProteinExplorer.tsx  Providers.tsx
